--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>ADDI EMPIRE</title>
+	<title>EMMANUEL KIPTOO</title>
 	 <meta charset="utf-8">
   <meta name="viewport" content="width=device-width" initial-scale="1.0" minimum-scale=1.0, maximum-scale=1.0, user-scalable="no"><meta name="keywords" content="Addi, Emmanuel, Bett, Kiptoo, Websites, Blogs, Personal Blogs, Emobilis, BEKA, Its_Addi_BEKA">
 <meta name="description" content="Personal Blog">
