--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ I have also done web design, I create websites and manage them.<br>
       <img src="pictures/pexels-photo.jpg" alt="Laptop for Coding" class="img-responsive img-circle" style="width:100%">
       <p>One man's motive 
 Can make him truly great...</p>
-      <p>In life, do not allow others <br>to suffer when you are blessed by God <br> with their solutions. <br> There is substitute for victory.</p>
+      <p>In life, do not allow others <br>to suffer when you are blessed by God <br> with their solutions. <br> There is no substitute for victory.</p>
     </div>
 
     
