--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Can make him truly great...</p>
         </tr>
         <tr>
           <td>Institutions:</td>
-          <td>Emobilis</td>
+          <td>1. Emobilis 2. Jomo Kenyatta University of Agriculture & Technology</td>
         </tr>
         <tr>
           <td>Career:</td>
