--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </nav>
 
 <div class="container-fluid ad1 text-center animated jello active " id="Home">
-<h2>EMMANUEL ADDI </h2>
+<h2>ADDI </h2>
 <img src="pictures/Bett.jpg" class="img-circle img-responsive" alt="Emmanuel Addi" width="450px" height="450px">
 <h2>The Technology Geek</h2>
 
