--- a/index.html
+++ b/index.html
@@ -219,5 +219,14 @@ Can make him truly great...</p>
 </div> <!--End of Contact Me-->
  <blackquote>Its_Addi_BEKA</blackquote><br>
  <strong><small>Proudly Made By: Bett Emmanuel Kiptoo Addi &copy</small></strong>
+	
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-6715537866521880",
+          enable_page_level_ads: true
+     });
+</script>
+	
 </body>
 </html>
