--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ Can make him truly great...</p>
     <div class="col-sm-6 col-md-6 col-xl-6">
       <caption><strong>BEKA Consultancy</strong></caption>
         <img src="pictures/Estate.png" alt="BEKA Consultancy" class="img-thumbnail">
-        <a href="https://emmanueladdi.github.io/AssignmentProject">Check it out</a>
+        <a href="https://emmanueladdi.github.io/AssignmentProject/">Check it out</a>
     </div>
      <div class="col-sm-6 col-md-6 col-xl-6">
       <caption><strong>BEKA Investments</strong></caption>
