--- a/index.html
+++ b/index.html
@@ -36,17 +36,20 @@
   </div>
 </nav>
 
-<div class="container-fluid ad1 text-center animated jello active " id="Home">
+<div class="container-fluid ad1 text-center animated jello active " id="Home"><!--Start of Home-->
 <h2>ADDI </h2>
 <img src="pictures/Bett.jpg" class="img-circle img-responsive" alt="Emmanuel Addi" width="450px" height="450px">
 <h2>The Technology Geek</h2>
 
-<div class="container-fluid ad2 text-center">
+<div class="container-fluid text-center">
   <h3>I'm Emmanuel Kiptoo</h3>
-  <p>I Addi, am looking forward to provide the best to the society. I would like to <br>
- 		give back to the society through my skills and becoming a role model to my fellows. <br>
- 		God is my pillar and through him who strengthens me, my dream is going to come true.</p>
+  <p class="ad2">A web developer, Android programmer <br> 
+    Back end developer|| Front end developer
+   <br>
+ 		I want to give back to the society through my skills and  <br>
+ 		God is my pillar</p>
   <a href="" class="btn btn-default btn-lg btn-success animated jello"><span class="glyphicon glyphicon-heart g1"></span></a>
+</div>
 </div>
 </div> <!--End of Home-->
 
@@ -182,21 +185,22 @@ Can make him truly great...</p>
 
 
 	
-<div class="container-fluid col-sm-3 col-md-3 col-xl-3">
+<div class="container-fluid col-sm-6 col-md-6 col-xl-6">
       <div>
       <label>Leave Your Comments Here</label>
       <form >
           <textarea class="input-group-lg form-control" rows="8" required="required" placeholder="Write your comments and ideas here">
      
            </textarea>
+           <br>
         <button type="send" name="Submit" class="btn btn-info">Submit</button>
       </form>
   </div>
 </div>
 
 
-<div class="container-fluid col-sm-9 col-md-9 col-xl-9">
-    <div class="col-sm-6 col-md-6 col-xl-6  well well-sm well-lg">
+<div class="container-fluid col-sm-6 col-md-6 col-xl-6">
+    <div class=" well well-sm well-lg">
     <span class="glyphicon glyphicon-star g2"></span>
     <caption><p style="color: #ff6666;">Follow the developer:</p></caption><br>
   
@@ -204,19 +208,17 @@ Can make him truly great...</p>
     <a href="http://www.instagram.com/its_addi_beka"><img src="pictures/ig.jpeg" width="50px" height="50px" title="Instagram"></a>
     <a href="http://www.twitter.com/its_addi_beka"><img src="pictures/tw.jpg" width="50px" height="50px" title="Twitter"></a>
     <a href="https://www.youtube.com/channel/UCjGz2d7JDyiCXavzv4pmhEA"><img src="pictures/yt.jpg" width="50px" height="50px" title="Youtube"></a>
-  
-  </div>
-  <div class="col-sm-6 col-md-6 col-xl-6 ad4">
-    <caption>Contact Me:</caption>
+<br><br>
 <address>
   <p><span class="glyphicon glyphicon-map-marker"></span> Eldoret, Kenya</p>
       <p><span class="glyphicon glyphicon-phone"></span> +254729596530</p>
-      <p><span class="glyphicon glyphicon-envelope"></span>emmanueladdi10399@gmail.com</p>
+      <p><span class="glyphicon glyphicon-envelope"></span> emmanueladdi10399@gmail.com</p>
 </address>
   
   </div>
 
 </div> <!--End of Contact Me-->
+ 
  <blackquote>Its_Addi_BEKA</blackquote><br>
  <strong><small>Proudly Made By: Bett Emmanuel Kiptoo Addi &copy</small></strong>
 	
