--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@ Can make him truly great...</p>
           <textarea class="input-group-lg form-control" rows="8" required="required" placeholder="Write your comments and ideas here">
      
            </textarea>
-           <br>
-	       <button type="send" name="Submit" class="btn btn-info">Submit</button>
+           <br><div>
+	      <button type="send" name="Submit" class="btn btn-info">Submit</button></div>
       </form>
 	     
   </div>
