--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ Can make him truly great...</p>
 
 <div id="Contact_Me" class="container-fluid ad5 text-center animated fadeIn">
 
- <h2>Straight out'ta Addi Empire</h2>
+ <h2>Straight out'ta BEKA Empire</h2>
 <div id="Cr" class="carousel slide text-center" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
@@ -137,7 +137,7 @@ Can make him truly great...</p>
     <h4>"You will only know where you are going if you know where you are coming from."<br><span style="font-style:normal;">Anonymous</span></h4>
     </div>
     <div class="item">
-      <h4>"What you do with yourself dies with you but what you do for others lives on longer after you have passed on."<br><span style="font-style:normal;">Emmanuel Addi, CEO ADDI EMPIRE</span></h4>
+      <h4>"What you do with yourself dies with you but what you do for others lives on longer after you have passed on."<br><span style="font-style:normal;">Emmanuel Addi, CEO BEKA EMPIRE</span></h4>
     </div>
     <div class="item">
       <h4>"It's hard to wait around for something you know might never happen; but it is hard to give up when you know it's everything you want."<br><span style="font-style:normal;">Anonymous</span></h4>
