--- a/index.html
+++ b/index.html
@@ -182,9 +182,11 @@ Can make him truly great...</p>
   </div>
 
 </div> <!--End of Contact Me-->
- 
+ <div class="container-fluid">
+	 
  <blackquote>Its_Addi_BEKA</blackquote><br>
  <strong><small>Proudly Made By: Bett Emmanuel Kiptoo Addi &copy</small></strong>
+	</div>
 	
 	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
