--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ Can make him truly great...</p>
 
 
 
-<div class="container-fluid col-sm-6 col-md-6 col-xl-6">
+<div class="container-fluid col-sm-6 col-md-6 col-xl-6 blck">
     <div class=" well well-sm well-lg">
     <span class="glyphicon glyphicon-star g2"></span>
     <caption><p style="color: #ff6666;">Follow the developer:</p></caption><br>
