--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ Can make him truly great...</p>
 
 <div id="Contact_Me" class="container-fluid ad5 text-center animated fadeIn">
 
- <h2>Straight out'ta BEKA Empire</h2>
+ <h2>Straight out'ta BEKA LTD</h2>
 <div id="Cr" class="carousel slide text-center" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
