Modified Contact Us

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	 <meta charset="utf-8">
   <meta name="viewport" content="width=device-width" initial-scale="1.0" minimum-scale=1.0, maximum-scale=1.0, user-scalable="no"><meta name="keywords" content="Addi, Emmanuel, Bett, Kiptoo, Websites, Blogs, Personal Blogs, Emobilis, BEKA, Its_Addi_BEKA">
 <meta name="description" content="Personal Blog">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/jfn.css">
   <link rel="stylesheet" type="text/css" href="css/jdhrfmcgvm.css">
   <link rel="stylesheet" type="text/css" href="Pro.css">
@@ -121,7 +122,7 @@ Can make him truly great...</p>
 
 <div id="Contact_Me" class="container-fluid ad5 text-center animated fadeIn">
 
- <h2>Straight out'ta BEKA LTD</h2>
+ <h2>BEKA NETWORKS</h2>
 <div id="Cr" class="carousel slide text-center" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
@@ -168,15 +169,16 @@ Can make him truly great...</p>
     <span class="glyphicon glyphicon-star g2"></span>
     <caption><p style="color: #ff6666;">Follow the developer:</p></caption><br>
   
-    <a href="http://www.facebook.com/emmanuel.addi"><img src="pictures/fb.jpeg" width="50px" height="50px" title="Facebook"></a>
-    <a href="http://www.instagram.com/its_addi_beka"><img src="pictures/ig.jpeg" width="50px" height="50px" title="Instagram"></a>
-    <a href="http://www.twitter.com/its_addi_beka"><img src="pictures/tw.jpg" width="50px" height="50px" title="Twitter"></a>
-    <a href="https://www.youtube.com/channel/UCjGz2d7JDyiCXavzv4pmhEA"><img src="pictures/yt.jpg" width="50px" height="50px" title="Youtube"></a>
+    <a href="http://www.facebook.com/emmanuel.addi"><img src="pictures/fb.jpeg" width="50px" height="50px" title="Facebook"><i class="fab fa-facebook-f"></i></a>
+    <a href="http://www.instagram.com/its_addi_beka"><img src="pictures/ig.jpeg" width="50px" height="50px" title="Instagram"><i class="fab fa-instagram"></i></a>
+    <a href="http://www.twitter.com/its_addi_beka"><img src="pictures/tw.jpg" width="50px" height="50px" title="Twitter"><i class="fab fa-twitter"></i></a>
+    <a href="https://www.youtube.com/channel/UCjGz2d7JDyiCXavzv4pmhEA"><img src="pictures/yt.jpg" width="50px" height="50px" title="Youtube"><i class="fab fa-youtube"></i></a>
+    <a href="https://www.linkedin.com/in/kiptoo-addi-140307157"><i class="fab fa-linkedin-in"></i></a>
+    <a href="https://www.github.com/in/EmmanuelAddi"><i class="fab fa-github"></i></a>
 <br><br>
 <address>
   <p><span class="glyphicon glyphicon-map-marker"></span> Eldoret, Kenya</p>
       <p><span class="glyphicon glyphicon-phone"></span> +254729596530</p>
-      <p><span class="glyphicon glyphicon-envelope"></span> emmanueladdi10399@gmail.com</p>
 </address>
   
   </div>
@@ -185,16 +187,18 @@ Can make him truly great...</p>
  <div class="container-fluid">
 	 
  <blackquote>Its_Addi_BEKA</blackquote><br>
- <strong><small>Proudly Made By: Bett Emmanuel Kiptoo Addi &copy</small></strong>
+ <strong><small>Proudly Made By: Kiptoo Addi &copy</small></strong>
 	</div>
 	
-	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!--
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({
           google_ad_client: "ca-pub-6715537866521880",
           enable_page_level_ads: true
      });
 </script>
+-->	
 	
 </body>
 </html>
