Modified navbar, contact me and projects page and general layout

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
 
 <body id="myPage" data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="0" tabindex="0" class="scrollspy">
 
-<nav class="navbar sticky-top navbar-expand-sm px-3 navbar-light">
-  <div class="container-fluid">
+<nav class="navbar sticky-top navbar-expand-sm px-3 navbar-light navbar-scroll p-2 ms-auto bg-body">
+  <div class="container">
     <a class="navbar-brand" href="#">Its_Addi_BEKA</a>
       <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#Addie" aria-controls="Addie" aria-expanded="false" aria-label="Toggle Navigation"}>
         <span class="navbar-toggler-icon"></span>
       </button>
       
     <div class="collapse navbar-collapse" id="Addie">
-      <ul class="nav nav-pills ms-auto mb-2 mb-lg-0">
-        <li class="active nav-item"><a href="#Home" class="nav-link" data-bs-toggle="Home">Home</a></li>
-        <li class="nav-item"><a href="#About_Me" class="nav-link" data-bs-toggle="About_Me_">About Me</a></li>
-        <li class="nav-item"><a href="#Projects" class="nav-link" data-bs-toggle="Projects_">Projects</a></li>
-        <li class="nav-item"><a href="#Contact_Me" class="nav-link" data-bs-toggle="Contact_Me_">Contact Me</a></li>
+      <ul class="navbar-nav nav nav-pills ms-auto">
+        <li class="active nav-item"><a href="#Home" class="nav-link p-2" data-bs-toggle="Home">Home</a></li>
+        <li class="nav-item"><a href="#About_Me" class="nav-link p-2" data-bs-toggle="About_Me_">About Me</a></li>
+        <li class="nav-item"><a href="#Projects" class="nav-link p-2" data-bs-toggle="Projects_">Projects</a></li>
+        <li class="nav-item"><a href="#Contact_Me" class="nav-link p-2" data-bs-toggle="Contact_Me_">Contact Me</a></li>
       </ul>
     </div>
   </div>
@@ -58,49 +58,46 @@
 </div> <!--End of Home-->
 
 <div class="container-fluid ad3 animated fadeIn" data-bs-toggle="About_Me_" id="About_Me">
-  <h3 class="text-center" style="font-weight:bold; ">About Me</h3>
+  <h3  class="text-dark text-center m-4">About Me</h3>
   <div class="row">
   	<div class="col-sm-4 col-md-4 col-xl-4">
-  <p>Your words are the bricks and mortar of the dreams you want to realize.  
+  <p class="text-dark">Your words are the bricks and mortar of the dreams you want to realize.  <br>
+
+    <img src="pictures/BEKA.png" alt="Addi" class="img-fluid rounded-circle h-75 w-75" style="height: 20%">
     <!--
       Your words are the greatest power you have.  The words you choose and use establish the life you experience. <br>In life, there is a vacuum that can never be filled with earthly or hearthly pleasures but only by accepting the Word of God; I am happy in the Lord Jesus Christ; My everlasting pillar.</p>    
-    -->
+    --><br>
     I am an all rounded guy, I love to participate in co-curricullar activities like 
     playing football, woodball, chess and many others. 
     Nature is one of my best attractions, Hiking and Adventure, Travelling, 
     Exploring new Technologies and Innovations, Listening to Music ... <br> 
     That's a bit about me, there's alot more<br> Thank You.
   </p>
-  <img src="pictures/BEKA.jpg" alt="Addi" class="img-fluid rounded-circle" style="width: 100%">
 </div>
 	<div class="col-sm-4 col-md-4 col-xl-4">
-      <p>
+    <img src="pictures/studies.jpg" alt="studies" class="img-fluid rounded-circle h-auto">
+      <p class="text-dark">
         I have studied Mobile Software Development & Entrepreneurship at eMobilis Mobile Technology Institute<br>
         I gained skills in Web design, Mobile Apps Development and Entrepreneurship.<br>
         I then Joined Jomo Kenyatta University of Agriculture and Technology (JKUAT) for for my
          Bachelors of Science Degree in Mathematics and Computer Science … 
       </p>
-      <img src="pictures/studies.jpg" alt="Beautiful sister" class="img-fluid rounded-circle" style="width: 100%">
     </div>
     <div class="col-sm-4 col-md-4 col-xl-4">
-      <p>
-
-      </p>
-      <img src="pictures/pexels-photo.jpg" alt="Laptop for Coding" class="img-fluid rounded-circle" style="width:100%">
-      <p><!--One man's motive Can make him truly great...--></p>
-      <strong>Skills</strong>
-      <p>
+      <img src="pictures/pexels-photo.jpg" alt="Laptop for Coding" class="img-fluid rounded-circle">
+      <strong  class="text-dark">Skills</strong>
+      <p class="text-dark">
         Photography, Graphic Designing...
       </p>
-      <strong>Languages</strong>
-      <p>
+      <strong class="text-dark">Languages</strong>
+      <p class="text-dark">
         Java, Python, Django, Flutter, Tailwind Css, Web-scripting Languages...
       </p>
-      <strong>Tools</strong>
-      <p>
+      <strong class="text-dark">Tools</strong>
+      <p class="text-dark">
         Git, PostMan...
       </p>
-     
+      <p><!--One man's motive Can make him truly great...--></p>     
 <!--
       <p>In life, do not allow others <br>to suffer when you are blessed by God <br> with their solutions. <br> There is no substitute for victory.</p>
 -->
@@ -132,23 +129,25 @@
 -->
  <!--End of About us-->
 
-<div id="Projects" class="container-fluid ad6 text-center animated fadeIn" data-bs-toggle="Projects_">
-  <h2>My Projects</h2>
+<div id="Projects" class="container ad6 text-center animated fadeIn" data-bs-toggle="Projects_">
+  <h2 class="text-dark m-4">My Projects</h2>
 
-    <div class="col-sm-6 col-md-6 col-xl-6">
-      <caption><strong>My Blog</strong></caption>
-        <img src="pictures/Blogg.png" alt="My Blog" class="img-thumbnail">
-        <a href="#">Visit this page</a>
-    </div>
-    <div class="col-sm-6 col-md-6 col-xl-6">
-      <caption><strong>BEKA Consultancy</strong></caption>
-        <img src="pictures/Estate.png" alt="BEKA Consultancy" class="img-thumbnail">
-        <a href="https://emmanueladdi.github.io/AssignmentProject/">Check it out</a>
-    </div>
-     <div class="col-sm-6 col-md-6 col-xl-6">
-      <caption><strong>BEKA Investments</strong></caption>
-        <img src="pictures/soon.png" alt="BEKA Consultancy" class="img-thumbnail">
-        <p>COMING SOON</p>
+    <div class="row">
+      <div class="col-sm-12 col-md-6 col-xl-6">
+        <caption><strong>My Blog</strong></caption>
+          <img src="pictures/Blogg.png" alt="My Blog" class="img-thumbnail">
+          <a href="#">Visit this page</a>
+      </div>
+      <div class="col-sm-12 col-md-6 col-xl-6">
+        <caption><strong>BEKA Consultancy</strong></caption>
+          <img src="pictures/Estate.png" alt="BEKA Consultancy" class="img-thumbnail">
+          <a href="https://emmanueladdi.github.io/AssignmentProject/">Check it out</a>
+      </div>
+       <div class="col-sm-12 col-md-6 col-xl-6">
+        <caption><strong>BEKA Investments</strong></caption>
+          <img src="pictures/soon.png" alt="BEKA Consultancy" class="img-thumbnail">
+          <p>COMING SOON</p>
+      </div>
     </div>
 
 </div> <!--End of Projects-->
@@ -156,12 +155,13 @@
 
 <div id="Contact_Me" class="container-fluid ad5 text-center animated fadeIn" data-bs-toggle="Contact_Me_">
 
- <h2>BEKA Networks</h2>
-<div id="Cr" class="carousel slide text-center" data-bs-ride="carousel">
+ <h2 class="text-white m-4">BEKA Networks</h2>
+  <div id="Cr" class="carousel slide text-center" data-bs-ride="carousel">
   <!-- Indicators -->
+  
   <!--
   <div class="carousel-indicators">
-    <button type="button" data-target="#Cr" data-bs-slide-to="0" class="active"></li>
+    <button type="button" data-target="#Cr" data-bs-slide-to="0" class="active" aria-current="true" aria-label="slide 1"></li>
     <button type="button" data-target="#Cr" data-bs-slide-to="1"></li>
     <button type="button" data-target="#Cr" data-bs-slide-to="2"></li>
     <button type="button" data-target="#Cr" data-bs-slide-to="3"></li>
@@ -171,19 +171,22 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-    <h4>"You will only know where you are going if you know where you are coming from."<br>
-      <span style="font-style:normal;">Anonymous</span></h4>
+    <h4>"You will only know where you are going if you know where you are coming from."<br><br>
+      <span style="font-style:normal;" class="text-dark">Anonymous</span></h4>
     </div>
     <div class="carousel-item">
       <h4>"What you do with yourself dies with you but what you do for others lives on longer after you have
-         passed on."<br><span style="font-style:normal;">Emmanuel Addi, CEO BEKA Networks</span></h4>
+         passed on."<br><br>
+         <span style="font-style:normal;" class="text-dark">Emmanuel Addi, CEO BEKA Networks</span></h4>
     </div>
     <div class="carousel-item">
       <h4>"It's hard to wait around for something you know might never happen; but it is hard to give up
-         when you know it's everything you want."<br><span style="font-style:normal;">Anonymous</span></h4>
+         when you know it's everything you want."<br><br>
+         <span style="font-style:normal;" class="text-dark">Anonymous</span></h4>
     </div>
       <div class="carousel-item">
-      <h4>"Never compare yourself to anyone."<br><span style="font-style:normal;">Anonymous</span></h4>
+      <h4>"Never compare yourself to anyone."<br><br>
+        <span style="font-style:normal;" class="text-dark">Anonymous</span></h4>
     </div>
   </div>
 
@@ -203,31 +206,36 @@
 
 
 
-<div class="container-fluid col-sm-12 col-md-12 col-xl-12 blck">
-    <div class=" well well-sm well-lg">
-    <span class="glyphicon glyphicon-star g2"></span>
-    <caption><p style="color: #ff6666;">Follow the developer:</p></caption><br>
+<div class="col-sm-12 col-md-12 col-xl-12 card border-white">
+    <div class="card-body " style="background-color: #ff6666;">
+    <span class="fa fa-star"></span>
+    <caption><p class="text-dark card-title" style="font-size: 16px; font-weight: bold;">Follow Me on my Socials:</p></caption><br>
   
-    <a href="http://www.facebook.com/emmanuel.addi"><i class="fa fa-facebook-f"></i></a>
-    <a href="http://www.instagram.com/its_addi_beka"><i class="fa fa-instagram"></i></a>
-    <a href="http://www.twitter.com/its_addi_beka"><i class="fa fa-twitter"></i></a>
-    <a href="https://www.youtube.com/channel/UCjGz2d7JDyiCXavzv4pmhEA"><i class="fa fa-youtube"></i></a>
-    <a href="https://www.linkedin.com/in/kiptoo-addi-140307157"><i class="fa fa-linkedin"></i></a>
-    <a href="https://www.github.com/EmmanuelAddi"><i class="fa fa-github"></i></a>
-<br><br>
-<address>
-  <p><span class="fa fa-map"></span> Eldoret, Kenya</p>
-      <p><span class="fa fa-phone"></span> +254729596530</p>
-</address>
+    <a href="http://www.facebook.com/emmanuel.addi" class="card-link"><i class="fa fa-facebook-f"></i></a>
+    <a href="http://www.instagram.com/its_addi_beka" class="card-link"><i class="fa fa-instagram"></i></a>
+    <a href="http://www.twitter.com/its_addi_beka" class="card-link"><i class="fa fa-twitter"></i></a>
+    <a href="https://www.youtube.com/channel/UCjGz2d7JDyiCXavzv4pmhEA" class="card-link"><i class="fa fa-youtube"></i></a>
+    <a href="https://www.linkedin.com/in/kiptoo-addi-140307157" class="card-link"><i class="fa fa-linkedin"></i></a>
+    <a href="https://www.github.com/EmmanuelAddi" class="card-link"><i class="fa fa-github"></i></a>
   
-  </div>
+  <address>
+  <p  class="card-text"><span class="fa fa-map"></span> Eldoret, Kenya</p>
+      <p  class="card-text"><span class="fa fa-phone"></span> +254 729 596 530</p>
+  </address>
+  
+</div>
+</div>
 
 </div> <!--End of Contact Me-->
- <div class="container-fluid">
-	 
- <blackquote>Its_Addi_BEKA</blackquote><br>
- <strong><small>Proudly Made By: Kiptoo Addi &copy</small></strong>
-	</div>
+
+<div class="card footer text-center">
+	 <div class="card-footer">
+    <blackquote class="text-dark" style="font-size: 16px; font-weight: bold;"> Its_Addi_BEKA</blackquote><br>
+   </div>
+   <div class="card-body">
+    <strong class="text-dark"><small>Proudly Made By: Kiptoo Addi &copy</small></strong>
+   </div>
+</div>
 	
 <!--
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
