--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
  		God is my pillar
    -->
  	</p>
-  <a href="" class="btn btn-default btn-lg btn-success animated jello"><span class="glyphicon glyphicon-heart g1"></span></a>
+
+  <button href="" class="btn btn-outline-success btn-lg animated jello">
+    <span class="fa fa-heart" ></span></button>
 </div>
 </div>
 </div> <!--End of Home-->
@@ -60,13 +62,15 @@
 <div class="container-fluid ad3 animated fadeIn" data-bs-toggle="About_Me_" id="About_Me">
   <h3  class="text-dark text-center m-4">About Me</h3>
   <div class="row">
-  	<div class="col-sm-4 col-md-4 col-xl-4">
-  <p class="text-dark">Your words are the bricks and mortar of the dreams you want to realize.  <br>
+  	<div class="card mb-3 col-sm-4 col-md-4 col-xl-4 border-white rounded-4">
+  <p class="text-dark card-subtitle">Your words are the bricks and mortar of the dreams you want to realize.</p>
 
-    <img src="pictures/BEKA.png" alt="Addi" class="img-fluid rounded-circle h-75 w-75" style="height: 20%">
+    <img src="pictures/BEKA.png" alt="Addi" class="img-fluid rounded-circle h-75 w-75 card-img-top" style="height: 20%">
     <!--
       Your words are the greatest power you have.  The words you choose and use establish the life you experience. <br>In life, there is a vacuum that can never be filled with earthly or hearthly pleasures but only by accepting the Word of God; I am happy in the Lord Jesus Christ; My everlasting pillar.</p>    
-    --><br>
+    -->
+   <div class="card-body">
+      <p class="card-text">
     I am an all rounded guy, I love to participate in co-curricullar activities like 
     playing football, woodball, chess and many others. 
     Nature is one of my best attractions, Hiking and Adventure, Travelling, 
@@ -74,36 +78,41 @@
     That's a bit about me, there's alot more<br> Thank You.
   </p>
 </div>
-	<div class="col-sm-4 col-md-4 col-xl-4">
-    <img src="pictures/studies.jpg" alt="studies" class="img-fluid rounded-circle h-auto">
-      <p class="text-dark">
+</div>
+	<div class=" card mb-3 col-sm-4 col-md-4 col-xl-4 border-white rounded">
+    <img src="pictures/studies.jpg" alt="studies" class="img-fluid h-auto card-img-top">
+    <div class="card-body">
+      <p class="text-dark card-text">
         I have studied Mobile Software Development & Entrepreneurship at eMobilis Mobile Technology Institute<br>
         I gained skills in Web design, Mobile Apps Development and Entrepreneurship.<br>
         I then Joined Jomo Kenyatta University of Agriculture and Technology (JKUAT) for for my
          Bachelors of Science Degree in Mathematics and Computer Science … 
       </p>
     </div>
-    <div class="col-sm-4 col-md-4 col-xl-4">
-      <img src="pictures/pexels-photo.jpg" alt="Laptop for Coding" class="img-fluid rounded-circle">
-      <strong  class="text-dark">Skills</strong>
-      <p class="text-dark">
-        Photography, Graphic Designing...
-      </p>
-      <strong class="text-dark">Languages</strong>
-      <p class="text-dark">
-        Java, Python, Django, Flutter, Tailwind Css, Web-scripting Languages...
-      </p>
-      <strong class="text-dark">Tools</strong>
-      <p class="text-dark">
-        Git, PostMan...
-      </p>
-      <p><!--One man's motive Can make him truly great...--></p>     
-<!--
-      <p>In life, do not allow others <br>to suffer when you are blessed by God <br> with their solutions. <br> There is no substitute for victory.</p>
--->
+      
+    </div>
+    <div class="card mb-3 col-sm-4 col-md-4 col-xl-4 border-white rounded">
+      <img src="pictures/pexels-photo.jpg" alt="Laptop for Coding" class="img-fluid rounded-circle card-img-top">
+      <div class="card-body">
+        <strong  class="text-dark card-title">Skills</strong>
+        <p class="text-dark card-text">
+          Photography, Graphic Designing...
+        </p>
+        <strong class="text-dark card-title">Languages</strong>
+        <p class="text-dark card-text">
+          Java, Python, Django, Flutter, Tailwind Css, Web-scripting Languages...
+        </p>
+        <strong class="text-dark card-title">Tools</strong>
+        <p class="text-dark card-text">
+          Git, PostMan...
+        </p>
+        <p><!--One man's motive Can make him truly great...--></p>     
+  <!--
+        <p>In life, do not allow others <br>to suffer when you are blessed by God <br> with their solutions. <br> There is no substitute for victory.</p>
+  -->
+      </div>      
     </div>
 
-    
 </div>
 <!--
 <div>
