--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
   <meta name="viewport" content="width=device-width" initial-scale="1.0" minimum-scale=1.0, maximum-scale=1.0, user-scalable="no"><meta name="keywords" content="Addi, Emmanuel, Bett, Kiptoo, Websites, Blogs, Personal Blogs, Emobilis, BEKA, Its_Addi_BEKA">
 <meta name="description" content="Personal Blog">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+<!--
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+-->
 <link rel="stylesheet" type="text/css" href="css/jdhrfmcgvm.css">
-  <link rel="stylesheet" type="text/css" href="Pro.css">
+ <link rel="stylesheet" type="text/css" href="Pro.css">
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -23,7 +25,7 @@
 
 <nav class="navbar sticky-top navbar-expand-sm px-3 navbar-light navbar-scroll p-2 ms-auto bg-body">
   <div class="container">
-    <a class="navbar-brand" href="#" style="font-family: 'Indie Flower', cursive;">Its_Addi_BEKA</a>
+    <a class="navbar-brand" href="#" style="@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');">Its_Addi_BEKA</a>
       <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#Addie" aria-controls="Addie" aria-expanded="false" aria-label="Toggle Navigation"}>
         <span class="navbar-toggler-icon"></span>
       </button>
