Added Shadow to About me Cards

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <div class="container-fluid ad3 animated fadeIn" data-bs-toggle="About_Me_" id="About_Me">
   <h3  class="text-dark text-center m-4">About Me</h3>
   <div class="row">
-  	<div class="card mb-3 col-sm-4 col-md-4 col-xl-4 border-white rounded-4">
+  	<div class="card mb-3 col-sm-4 col-md-4 col-xl-4 border-white rounded-4 shadow p-3 mb-5 bg-body">
   <p class="text-dark card-subtitle">Your words are the bricks and mortar of the dreams you want to realize.</p>
 
     <img src="pictures/BEKA.png" alt="Addi" class="img-fluid rounded-circle h-75 w-75 card-img-top" style="height: 20%">
@@ -84,7 +84,7 @@
   </p>
 </div>
 </div>
-	<div class=" card mb-3 col-sm-4 col-md-4 col-xl-4 border-white rounded">
+	<div class=" card mb-3 col-sm-4 col-md-4 col-xl-4 border-white rounded shadow p-3 mb-5 bg-body">
     <img src="pictures/studies.jpg" alt="studies" class="img-fluid h-auto card-img-top">
     <div class="card-body">
       <p class="text-dark card-text">
@@ -96,7 +96,7 @@
     </div>
       
     </div>
-    <div class="card mb-3 col-sm-4 col-md-4 col-xl-4 border-white rounded">
+    <div class="card mb-3 col-sm-4 col-md-4 col-xl-4 border-white rounded shadow p-3 mb-5 bg-body">
       <img src="pictures/pexels-photo.jpg" alt="Laptop for Coding" class="img-fluid rounded-circle card-img-top">
       <div class="card-body">
         <strong  class="text-dark card-title">Skills</strong>
