--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <nav class="navbar sticky-top navbar-expand-sm px-3 navbar-light navbar-scroll p-2 ms-auto bg-body">
   <div class="container">
-    <a class="navbar-brand" href="#" style="@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');">Its_Addi_BEKA</a>
+    <a class="navbar-brand" href="#" style="@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap'); font-family: 'Indie Flower', cursive;">Its_Addi_BEKA</a>
       <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#Addie" aria-controls="Addie" aria-expanded="false" aria-label="Toggle Navigation"}>
         <span class="navbar-toggler-icon"></span>
       </button>
