--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width" initial-scale="1.0" minimum-scale=1.0, maximum-scale=1.0, user-scalable="no"><meta name="keywords" content="Addi, Emmanuel, Bett, Kiptoo, Websites, Blogs, Personal Blogs, Emobilis, BEKA, Its_Addi_BEKA">
 <meta name="description" content="Personal Blog">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-<!--
+<!-- Font -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
--->
+
 <link rel="stylesheet" type="text/css" href="css/jdhrfmcgvm.css">
  <link rel="stylesheet" type="text/css" href="Pro.css">
 <!-- Add icon library -->
